aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: metadentpatientssvc
  namespace: #{namespace}#
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: patients-#{environment}#
